--- a/kanshi/config
+++ b/kanshi/config
@@ -1,14 +1,22 @@
-profile thinkpad {
-  output "eDP-1" mode 1920x1200@60Hz enable position 0,0 scale 1
+profile Laptop {
+  output eDP-1 enable position 0,0 scale 1
 }
 
-profile work {
+profile Home {
+  output eDP-1 disable position 312,2066 scale 1
+	output "Lenovo Group Limited LEN G34w-10 UGW00T6H" mode 3440x1440@60Hz position 0,626 scale 1
+}
+
+profile Work {
+  output eDP-1 disable position 312,2066 
   output "Samsung Electric Company LS27A800U HNMR601821" mode 2560x1440@59.95Hz position 0,626 scale 1
   output "Samsung Electric Company LS27A800U HNMR601813" mode 2560x1440@59.95Hz position 2560,0 scale 1 transform 90
-  output "eDP-1" disable
-}
-
-profile home {
-  output "eDP-1" mode 1920x1200@60Hz enable position 276,1440 scale 1
-  output "LG Electronics LG HDR 4K 0x00050BBE" mode 2560x1440@59.951000Hz enable position 0,0 scale 1
+  exec hyprctl dispatch moveworkspacetomonitor 1 DP-3
+  exec hyprctl dispatch moveworkspacetomonitor 2 DP-3
+  exec hyprctl dispatch moveworkspacetomonitor 3 HDMI-A-1
+  exec hyprctl dispatch moveworkspacetomonitor 4 DP-3
+  exec hyprctl dispatch moveworkspacetomonitor 5 HDMI-A-1
+  exec hyprctl dispatch moveworkspacetomonitor 6 HDMI-A-1
+  exec hyprctl dispatch moveworkspacetomonitor 7 HDMI-A-1
+  exec hyprctl dispatch moveworkspacetomonitor 8 HDMI-A-1
 }
