--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,14 +8,14 @@ TERM = "xterm-256color"
 size = 12.0
 
 [font.bold]
-family = "JetBrainsMono Nerd Font"
+family = "FiraMono Nerd Font"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
+family = "FiraMono Nerd Font"
 
 [font.offset]
 x = 0
