--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,7 +19,7 @@ $menu = wofi -Imi --show drun
 $lock = hyprlock
 
 exec-once=pkill waybar; waybar
-exec-once=nm-applet & blueman-applet & swaync & hyprpaper
+exec-once=blueman-applet & swaync & hyprpaper
 exec-once=hypridle
 exec-once=solaar -w hide
 exec=pkill kanshi; exec kanshi 
