--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,13 +3,10 @@
 #
 source=~/.config/hypr/mocha.conf
 
-exec-once = hyprctl setcursor rose-pine-hyprcursor 24
-exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
-
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-#source = ~/.config/hypr/monitors.conf
-monitor=eDP-1,preferred,auto,1.0
+source = ~/.config/hypr/programs.sh
+#monitor=eDP-1,preferred,auto,1.0
 
 # Set programs that you use
 $terminal = ghostty
