--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,6 @@ source=~/.config/hypr/mocha.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-source = ~/.config/hypr/programs.sh
 #monitor=eDP-1,preferred,auto,1.0
 
 # Set programs that you use
@@ -212,3 +211,4 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Screensharing
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
+exec-once=bash ~/.config/hypr/programs.sh
