--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,7 @@ source=~/.config/hypr/mocha.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-#monitor=eDP-1,preferred,auto,1.0
+monitor=eDP-1,preferred,auto,1.0
 
 # Set programs that you use
 $terminal = ghostty
