--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -138,20 +138,26 @@ windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 $mainMod = super
 $sup = ralt
 
-# Sound through pactl
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
-# Script testing
-#bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh up
-#bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh down
-#bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh mute
+# Media keys through playerctl
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPrev, exec, playerctl previous
+
+# Sound through wpctl
+# bind = , XF86AudioRaiseVolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ +5%
+# bind = , XF86AudioLowerVolume, exec, wpctl set-sink-volume @DEFAULT_SINK@ -5%
+# bind = , XF86AudioMute, exec, wpctl set-sink-mute @DEFAULT_SINK@ toggle
+# bind = , XF86AudioMicMute, exec, wpctl set-source-mute @DEFAULT_SOURCE@ toggle  
 
 # Brightness through brightnessctl
-bind = , XF86MonBrightnessUp, exec, light -A 10
-bind = , XF86MonBrightnessDown, exec, light -U 10
+bind = , XF86MonBrightnessUp, exec, light -A 5
+bind = , XF86MonBrightnessDown, exec, light -U 5
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
