♻️ (hyprland.conf, idle.sh, sunset.sh): refactor scripts to use absolute paths for binaries to ensure consistency and reliability across different environments

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -164,10 +164,10 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, 0, exec, sleep 0.1 && wlogout -b 3 -l ~/.config/wlogout/layout
 bind = $SUPER_SHIFT, 0, exec, sleep 0.1 && systemctl suspend && hyprlock
 bind = $SUPER_SHIFT, R, exec, hyprctl reload
-bind = $SUPER_SHIFT, P, exec, ~/dotfiles/hyprland/.config/hypr/edp-disable.sh
-bind = $SUPER_SHIFT, I, exec, ~/dotfiles/hyprland/.config/hypr/idle.sh
-bind = $SUPER_SHIFT, N, exec, ~/dotfiles/hyprland/.config/hypr/sunset.sh
-bind = $mainMod, P, exec, ~/dotfiles/hyprland/.config/hypr/edp-enable.sh
+bind = $SUPER_SHIFT, P, exec, /home/dk/.config/hypr/edp-disable.sh
+bind = $SUPER_SHIFT, I, exec, /home/dk/.config/hypr/idle.sh
+bind = $SUPER_SHIFT, N, exec, /home/dk/.config/hypr/sunset.sh
+bind = $mainMod, P, exec, /home/dk/.config/hypr/edp-enable.sh
 bind = $SUPER_SHIFT, s, exec, hyprshot -m region 
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $SUPER_SHIFT, E, togglesplit, # dwindle
